#1297 style issues on ios (#1299)

--- a/assets/style/app.styl
+++ b/assets/style/app.styl
@@ -7,6 +7,7 @@ html
 body
 	overflow auto
 	max-height 100vh
+	width: 100vw;
 	font-size 16px
 	-webkit-overflow-scrolling touch
 	-webkit-text-size-adjust: 100%;
